--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_messaging: ^15.1.3
   firebase_database: ^11.1.4
   
+  # Local notifications
+  flutter_local_notifications: ^18.0.1
+  
   # Google Sign-In
   google_sign_in: ^6.2.1
   
