setup on new lptp

--- a/firebase.json
+++ b/firebase.json
@@ -1,51 +1,1 @@
-{
-  "database": {
-    "rules": "database.rules.json"
-  },
-  "firestore": {
-    "rules": "firestore.rules"
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "mids-project-6b09c",
-          "appId": "1:173645270436:android:adebf160a26fcb27b84531",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "mids-project-6b09c",
-          "configurations": {
-            "android": "1:173645270436:android:adebf160a26fcb27b84531",
-            "ios": "1:173645270436:ios:48142556d85d4ff3b84531",
-            "macos": "1:173645270436:ios:48142556d85d4ff3b84531",
-            "web": "1:173645270436:web:641c0f07603c20cfb84531",
-            "windows": "1:173645270436:web:3a850d531e036cb6b84531"
-          }
-        }
-      }
-    }
-  },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "disallowLegacyRuntimeConfig": true,
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
-    }
-  ]
-}
+{"database":{"rules":"database.rules.json"},"firestore":{"rules":"firestore.rules"},"storage":{"rules":"storage.rules"},"flutter":{"platforms":{"android":{"default":{"projectId":"servicelink-3061a","appId":"1:824927624616:android:4bfcfcf52704532058919d","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"servicelink-3061a","configurations":{"android":"1:824927624616:android:4bfcfcf52704532058919d","ios":"1:824927624616:ios:018da6eb8b5cb4f058919d","macos":"1:824927624616:ios:018da6eb8b5cb4f058919d","web":"1:824927624616:web:34a6de3c01dffdcf58919d","windows":"1:824927624616:web:76e9028262ed743c58919d"}}}}},"functions":[{"source":"functions","codebase":"default","disallowLegacyRuntimeConfig":true,"ignore":["node_modules",".git","firebase-debug.log","firebase-debug.*.log","*.local"],"predeploy":["npm --prefix \"$RESOURCE_DIR\" run lint"]}]}
