--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mids_project
-description: "A new Flutter project."
+description: "ServiceLink - Connect with trusted service providers for home repairs, maintenance, and professional services. Find plumbers, electricians, cleaners, and more."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -65,6 +65,7 @@ dependencies:
   google_fonts: ^6.2.1
   geolocator: ^14.0.2
   url_launcher: ^6.3.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
